# DEV_InfoAdventures

./: .gitignore  CHANGELOG.md  DEV-InfoAdventures.cabal  LICENSE  Makefile  README.md  calibracion.py  mapmaker.py
app/: Main.hs
app/src/: Camara.hs  Inicio.hs  Items.hs  Juego.hs  Render.hs  Types.hs  Utils.hs
app/src/Fisica/: Colisiones.hs  MovEnemigo.hs  MovJugador.hs  SAT.hs
app/src/Graficos/: Dibujado.hs  Render.hs
app/src/Mapas/: Mapa.hs
app/src/Objetos/: Camara.hs  Cono.hs
app/src/Personajes/: Enemigo.hs  Jugador.hs
mapmaker/: __init__.py  canvas.py  controles.py  haskell.py
scripts/: setup-linux.sh
src/: Inicio.hs  Juego.hs  Launcher.hs  Types.hs  Utils.hs
src/Fisica/: Angulos.hs  Colisiones.hs  Combates.hs  Disparo.hs  MovEntidad.hs  MovParticulas.hs  Movimiento.hs  SAT.hs  Vectores.hs
src/Globals/: Camara.hs  Types.hs
src/Graficos/: Dibujado.hs  HUD.hs  Render.hs
src/Mapas/: Mapa.hs
src/Objetos/: Arma.hs  Buff.hs  Camara.hs  Cono.hs  HUD.hs  ItemBuff.hs  Items.hs  Obstaculo.hs  Particula.hs  Spawner.hs  Types.hs
src/Personajes/: Control.hs  Enemigo.hs  IA.hs  Jugador.hs  Types.hs  Zombie.hs
