cabal-version:      3.4
name:               DEV-InfoAdventures
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marco Delgado
maintainer:         marcodelgado.1008@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable DEV-InfoAdventures
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Fisica.Angulos
        Fisica.Colisiones
        Fisica.Movimiento
        Fisica.SAT
        Fisica.Vectores

        Globals.Types

        Graficos.Dibujado
        Graficos.Render

        Mapas.Mapa

        Objetos.Camara
        Objetos.Cono
        Objetos.HUD
        Objetos.ItemBuff
        Objetos.Particula
        Objetos.Spawner
        Objetos.Types

        Personajes.Control
        Personajes.IA
        Personajes.Jugador
        Personajes.Zombie
        Personajes.Types

        Types
        Inicio
        Juego
    build-depends:
        base ^>=4.17.2.0
        ,sdl2
        ,sdl2-ttf
        ,linear
        ,bytestring
        ,directory
        ,text
        ,mtl 
        ,vector
        ,random
        ,microlens
        ,microlens-th
    hs-source-dirs:   app, src

    default-language: Haskell2010