cabal-version:      3.4
name:               DEV-InfoAdventures
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marco Delgado
maintainer:         marcodelgado.1008@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable DEV-InfoAdventures
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Fisica.Angulos
        Fisica.Colisiones
        Fisica.Disparo
        Fisica.MovEntidad
        Fisica.MovParticulas
        Fisica.SAT
        Fisica.Vectores

        Globals.Types
        Globals.Camara

        Graficos.Dibujado
        Graficos.HUD
        Graficos.Render

        Mapas.Mapa

        Objetos.Arma
        Objetos.Buff
        Objetos.Particula
        Objetos.Spawner
        Objetos.Types

        Personajes.Control
        Personajes.IA
        Personajes.Jugador
        Personajes.Types
        Personajes.Zombie

        Types
        Inicio
        Juego
        Launcher
    build-depends:
        base ^>=4.17.2.0
        ,sdl2
        ,sdl2-ttf
        ,sdl2-image
        ,linear
        ,bytestring
        ,directory
        ,text
        ,mtl 
        ,vector
        ,random
        ,lens
        ,microlens
        ,microlens-th
        ,process
    hs-source-dirs:   app, src

    default-language: Haskell2010